# ball-plate

./: README.md  matlab_table_2019b.slx.slx  plane_control_2019b.slx  servo_test_2019b.slx  table_test_2019b.slx
Hardware/: .project  Makefile  README.md  chconf.h  common.h  communication.c  communication.h  control_pid.c  control_pid.h  halconf.h  main.c  mcuconf.h  motorControl.c  motorControl.h  positionFB.c  positionFB.h  project.mk  systemControl.c  systemControl.h
Hardware_f103/: .project  Makefile  README.md  chconf.h  common.h  halconf.h  main.c  mcuconf.h  motorControl.c  positionFB.c  positionFB.h  project.mk  read_ADC_test.c  systemControl.c  systemControl.h  usbcfg.c
Simulation/: feedforward.cfg  objects.py  plate.urdf  requirements.txt  simulate_FFPID.ipynb  simulate_FFPID.py  simulate_PID.ipynb  simulate_PID.py  train_FFPID.ipynb  train_PID.ipynb  winner_ff
Software/: communication.py  requirements.txt  tst.c  tst.py
Software/table_control/: CMakeLists.txt  build.sh  main.cpp
